@@ -1,18 +1,14 @@
 
     atapi.${field_type}Field(
         name='${field_name}',
+        storage = atapi.AnnotationStorage(),
+        required=False,
+        #searchable=1,
+        #default='',
+        #schemata ='default',
         widget=atapi.${widget_type}Widget(
-            label="${field_label}",
-            label_msgid='${i18n_domain}_label_${field_name}',
-            description="${field_desc}",
-            description_msgid='${i18n_domain}_help_${field_name}',
-            i18n_domain='${i18n_domain}',
+            label=_(u"${field_name}"),
+            description=_(u"Description of ${field_name}"),
         ),
-#if str($required) == 'True'
-        required=${required},
-#end if
-#if str($default) != ''
-		default='${default}',
-#end if
     ),
 
